PLD-COMP-RENDU-MERGE/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-25_erreur_semi_comma/gcc-compile.txt
input.c: In function ‘main’:
input.c:5:5: error: expected ‘,’ or ‘;’ before ‘return’
    5 |     return var2;
      |     ^~~~~~

return code: 1
